# fullstack_project_template

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: ci.yml
backend/: Cargo.toml
backend/src/: config.rs  errors.rs  lib.rs  main.rs
backend/src/auth/: jwt.rs  middleware.rs  password.rs
backend/src/db/: migrations.rs  mod.rs
backend/src/email/: mod.rs  templates.rs
backend/src/models/: user.rs
backend/src/routes/: auth.rs  health.rs  mod.rs  user.rs
backend/tests/api/: auth_test.rs  mod.rs  user_test.rs
backend/tests/common/: mod.rs
frontend/: eslint.config.js  package-lock.json  package.json  svelte.config.js  vite.config.ts
frontend/src/: app.html
frontend/src/lib/api/: client.ts
frontend/src/lib/components/: AuthGuard.svelte  Navbar.svelte
frontend/src/lib/stores/: auth.svelte.ts
frontend/src/lib/types/: index.ts
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/dashboard/: +page.svelte
frontend/src/routes/forgot-password/: +page.svelte
frontend/src/routes/login/: +page.svelte
frontend/src/routes/register/: +page.svelte
frontend/src/routes/reset-password/: +page.svelte
frontend/tests/components/: Navbar.test.ts
review/: README.md  critical.md  high.md  low.md  medium.md
scripts/: build.sh  dev.sh  format.sh  lint.sh  setup.sh  test.sh
