[package]
name = "fullstack-app"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace", "fs", "set-header"] }
subtle = "2"
tower = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.39", features = ["bundled"] }
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
argon2 = { version = "0.5", features = ["std"] }
password-hash = { version = "0.5", features = ["getrandom"] }
lettre = { version = "0.11", features = ["tokio1-native-tls", "builder"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
validator = { version = "0.20", features = ["derive"] }
rand = "0.9"
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
tempfile = "3"
